// Proto file: defines gRPC messages and services
// Sercices = our class/interface for remote procedural calls; we group all related gRPC endpoints here
// Messages = structured data type; used for defining requests/responses

syntax = "proto3";

package pdfservice;

option go_package = "audio-notes/pdfservice";

service TextExtractionService {
    // define rpc endpoint called ExtractText
    // this will be a unary rpc
    // request type must be ExtractTextRequest, and return type will be ExtractTextResponse
    rpc ExtractText (ExtractTextRequest) returns (ExtractTextResponse);
}

message ExtractTextRequest {
    string s3_url = 1;
}

message ExtractTextResponse {
    string extracted_text = 1;
}
